<resources>
    <string name="app_name">消息中转站</string>
    <string name="send_email">发送邮箱</string>
    <string name="receive_email">接收邮箱</string>
    <string name="authorization_code">授权码</string>
    <string name="ok">OK</string>
    <string name="clear">clear</string>
    <string name="host">host</string>
    <string name="port">port</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">文件中转站</string>
    <string name="nav_header_subtitle">联系方式:winter_2013@163.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="config">配置</string>
</resources>
